test/corpus/comments.txt
===============
Simple Packages
===============

SomeProject # This is a comment
someproject # This is a comment
some-project # This is a comment
some_project # This is a comment
some-project2 # This is a comment

---

(source_file
 (name) (comment)
 (name) (comment)
 (name) (comment)
 (name) (comment)
 (name) (comment)
 )



==================
Versioned Packages
==================

someproject == 1.0.0 # This is a comment
someproject >= 1.0.0 # This is a comment
someproject <= 1.0.0 # This is a comment
someproject== 1.0.0 # This is a comment
someproject>= 1.0.0 # This is a comment
someproject<= 1.0.0 # This is a comment
someproject ==1.0.0 # This is a comment
someproject >=1.0.0 # This is a comment
someproject <=1.0.0 # This is a comment
someproject==1.0.0 # This is a comment
someproject>=1.0.0 # This is a comment
someproject<=1.0.0 # This is a comment

---

(source_file
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 )

==================================
Major and Minor Versioned Packages
==================================

someproject == 1.0 # This is a comment
someproject >= 1.0 # This is a comment
someproject <= 1.0 # This is a comment
someproject== 1.0 # This is a comment
someproject>= 1.0 # This is a comment
someproject<= 1.0 # This is a comment
someproject ==1.0 # This is a comment
someproject >=1.0 # This is a comment
someproject <=1.0 # This is a comment
someproject==1.0 # This is a comment
someproject>=1.0 # This is a comment
someproject<=1.0 # This is a comment

---

(source_file
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 )

=====================
RC Versioned Packages
=====================

someproject == 1.0.0rc0 # This is a comment
someproject >= 1.0.0rc0 # This is a comment
someproject <= 1.0.0rc0 # This is a comment
someproject== 1.0.0rc0 # This is a comment
someproject>= 1.0.0rc0 # This is a comment
someproject<= 1.0.0rc0 # This is a comment
someproject ==1.0.0rc0 # This is a comment
someproject >=1.0.0rc0 # This is a comment
someproject <=1.0.0rc0 # This is a comment
someproject==1.0.0rc0 # This is a comment
someproject>=1.0.0rc0 # This is a comment
someproject<=1.0.0rc0 # This is a comment

---

(source_file
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 (name) (version) (comment)
 )
