test/corpus/version_specifier.txt
=================
Complex Specifier
=================

~= 0.9, >= 1.0, != 1.3.4.*, < 2.0

---

(requirements
 (version_specifier
 (version))
 (version_specifier
 (version))
 (version_specifier
 (version))
 (version_specifier
 (version))
)
